@@ -29,11 +29,6 @@
  *   - S2DAO_PHP5 : S2DAO.PHP5 ROOT Directory
  *     [ string default /src/s2dao.php5 ]
  * 
- * User Definition
- *   User could define these definitions.
- *   - S2DAO_PHP5_USE_COMMENT : constant or comment annotation usage
- *     [ boolean: default false ]
- *
  * Autoload function must be defined
  *   sample : use S2ContainerClassLoader
  *     S2ContainerClassLoader::import(S2CONTAINER_PHP5);
